# agentflow

./: .pre-commit-config.yaml  Dockerfile  README.md  agentflow.py  config.json  docker-compose.yml  pyproject.toml  requirements.txt
src/: builder.py  gui.py  ir.py
src/core/: blackboard.py  graph.py  node.py  registry.py
src/nodes/: core.py
src/runtime/: engine.py  events.py  services.py
src/server/: app.py  schemas.py
src/server/static/: app.js  index.html
