[project]
name = "AgentFlow"
version = "0.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","N","A","C4","T20"]
ignore = ["E203"]

[tool.mypy]
mypy_path = "src"
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pyright]
include = ["src"]